redesigned the apis to adjust github search api limitations
